# ClipperVX

./: .gitignore  README.md  pyproject.toml  requirements.txt
clipper/: __init__.py  cli.py  config.py  orchestrator.py  web_server.py
clipper/caption_generator/: __init__.py  generator.py
clipper/clip_selector/: __init__.py  heuristic.py  llm_selector.py
clipper/downloader/: __init__.py  ytdlp_wrapper.py
clipper/llm/: antigravity_client.py
clipper/transcriber/: __init__.py  vtt_parser.py  whisper_fallback.py
clipper/uploader/: __init__.py  youtube.py
clipper/utils/: __init__.py  logger.py  validators.py
clipper/video_editor/: __init__.py  ass_generator.py  ffmpeg_pipeline.py
clipper/web/static/css/: crystalline.css
clipper/web/static/js/: app.js
clipper/web/templates/: index.html
configs/: defaults.yaml
